# win-iptables

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  README.zh.md  package.ps1  run-tests.ps1
.kiro/specs/winiptables/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: cpp-conventions.md
cmake/: FindWinDivert.cmake
include/winiptables/: capture.hpp  imatch.hpp  log.hpp  model.hpp  nat_table.hpp  packet.hpp  persist.hpp  rule_builder.hpp  rule_engine.hpp  rule_store.hpp  stateful.hpp  table_pipeline.hpp
include/winiptables/matches/: basic.hpp  multiport.hpp  state.hpp  tcp.hpp
installer/: winiptables.iss
src/cli/: CMakeLists.txt  ipc_client.cpp  ipc_client.hpp  main.cpp  parser.cpp  parser.hpp
src/core/: CMakeLists.txt  capture.cpp  log.cpp  model.cpp  nat_table.cpp  packet.cpp  persist.cpp  rule_builder.cpp  rule_engine.cpp  rule_store.cpp  stateful.cpp  table_pipeline.cpp
src/core/matches/: basic.cpp  multiport.cpp  state.cpp  tcp.cpp
src/service/: CMakeLists.txt  command_dispatcher.cpp  command_dispatcher.hpp  ipc_server.cpp  ipc_server.hpp  main.cpp  service.cpp  service.hpp
tests/: CMakeLists.txt  test_log.cpp  test_matches.cpp  test_model.cpp  test_packet_parse.cpp  test_parser.cpp  test_persist.cpp  test_rule_engine.cpp  test_rule_store.cpp  test_table_pipeline.cpp
win-iptables/: main.cpp  win-iptables.sln  win-iptables.vcxproj
win-iptables-gtest/: win-iptables-gtest.vcxproj
win-iptables-gtest/conan/: conan_gtest_gmock.props  conan_gtest_gmock_debug_win32.props  conan_gtest_gmock_main.props  conan_gtest_gmock_main_debug_win32.props  conan_gtest_gmock_main_vars_debug_win32.props  conan_gtest_gmock_main_vars_debug_x64.props  conan_gtest_gmock_vars_debug_win32.props  conan_gtest_gmock_vars_debug_x64.props  conan_gtest_gtest_main.props  conan_gtest_gtest_main_debug_win32.props  conan_gtest_gtest_main_vars_debug_win32.props  conan_gtest_gtest_main_vars_debug_x64.props  conan_gtest_libgtest.props  conan_gtest_libgtest_debug_win32.props  conan_gtest_libgtest_vars_debug_win32.props  conan_gtest_libgtest_vars_debug_x64.props
win-iptables-srv/: main.cpp  win-iptables-srv.vcxproj
